@@ -2,6 +2,9 @@
 
 	* Tools/AGSParser.m: Bugfix ... look for source files more
 	intelligently. Try both current directory and relative to header.
+	* Tools/AGSOutput.m: When creating template output file for functions
+	etc because none was supplied, take account of the -Up flag and
+	create an up link in it.
 	* Source/GSHTTPURLHandle.m: If response parsing fails, fail the
 	load operation and (conditionally when debug enabled) log an error.
 
